Ensure good token contrast, mark capture groups

--- a/public/theme.css
+++ b/public/theme.css
@@ -123,8 +123,12 @@
 	--theme-selection-color: hsla(var(--color-purple), 1);
 	--theme-selection-bg: hsla(var(--color-purple), var(--theme-accent-opacity));
 	--theme-code-selection-bg: hsla(var(--color-purple), 0.4);
-	--theme-code-highlight-bg: hsla(var(--color-purple), 0.125);
-	--theme-code-highlight-border: hsla(var(--color-purple), 1);
+	--theme-code-mark-bg: hsl(226, 50%, 33%);
+	--theme-code-ins-bg: hsl(122, 22%, 23%);
+	--theme-code-del-bg: hsl(338, 40%, 26%);
+	--theme-code-mark-border: hsl(224, 50%, 54%);
+	--theme-code-ins-border: hsl(128, 42%, 38%);
+	--theme-code-del-border: hsl(338, 46%, 53%);
 
 	--theme-bg-gradient: linear-gradient(180deg, var(--theme-bg-gradient-top), var(--theme-bg-gradient-top) calc(var(--theme-navbar-height) + var(--theme-mobile-toc-height)), var(--theme-bg-gradient-bottom));
 
@@ -161,8 +165,12 @@
 	--theme-code-text: hsla(var(--color-base-white), 80%, 1);
 	--theme-navbar-bg: var(--theme-bg);
 	--theme-selection-color: hsla(var(--color-base-white), 100%, 1);
-	--theme-code-highlight-bg: hsla(var(--color-purple), 0.25);
-	--theme-code-highlight-border: hsla(var(--color-purple), 0.75);
+	--theme-code-mark-bg: hsl(224, 60%, 25%);
+	--theme-code-ins-bg: hsl(122, 29%, 17%);
+	--theme-code-del-bg: hsl(337, 47%, 19%);
+	--theme-code-mark-border: hsl(225, 42%, 46%);
+	--theme-code-ins-border: hsl(128, 41%, 32%);
+	--theme-code-del-border: hsl(340, 34%, 43%);
 
 	--theme-glow-highlight: hsla(var(--color-base-purple), 50%, 1);
 	--theme-glow-diffuse: hsla(var(--color-base-purple), 35%, 0.4);
